added error and response codes,added swagger schema for get/post/delete
