# backend/kierunki/handlers.js
@@ -1,3 +1,6 @@
+import { StatusCodes } from "http-status-codes";
+import { NotFoundError } from "../utils.js";
+
 export function getKierunki(dbClient) {
   return async (req, res) => {
     const kierunek = await dbClient.query("SELECT * FROM kierunek");
@@ -13,16 +16,19 @@ export function createKierunek(dbClient) {
     const { nazwa_kierunku, poziom_studiow } = req.body;
     const values = [nazwa_kierunku, poziom_studiow];
     const kierunek = await dbClient.query(query, values);
-    res.json(kierunek.rows[0]);
+    res.status(StatusCodes.CREATED).json(kierunek.rows[0]);
   };
 }
 
 export function deleteKierunek(dbClient) {
   return async (req, res) => {
     const query = `
-    DELETE FROM kierunek WHERE id_kierunek = $1`;
-    const id_kierunek = req.params.id;
-    await dbClient.query(query, [id_kierunek]);
-    res.json({ message: "pomyślnie usunięto kierunek", id: id_kierunek });
+    DELETE FROM kierunek WHERE id_kierunek = $1;`;
+    const id_kierunek = Number(req.params.id);
+    const result = await dbClient.query(query, [id_kierunek]);
+    if (result.rowCount === 0) {
+      throw new NotFoundError();
+    }
+    res.json({ id: id_kierunek });
   };
 }
