# backend/swagger-schema.yml
@@ -53,24 +53,520 @@ components:
       items:
         $ref: '#/components/schemas/Student'
 
+    CreateWykladowca:
+      type: object
+      properties:
+        imie:
+          type: string
+          example: "Jan"
+        nazwisko:
+          type: string
+          example: "Kowalski"
+        telefon:
+          type: string
+          example: "987654321"
+        email:
+          type: string
+          example: "jan.kowalski@example.com"
+
+    Wykladowca:
+      type: object
+      properties:
+        id_wykladowca:
+          type: integer
+          example: 1
+        imie:
+          type: string
+          example: "Jan"
+        nazwisko:
+          type: string
+          example: "Kowalski"
+        telefon:
+          type: string
+          example: "987654321"
+        email:
+          type: string
+          example: "jan.kowalski@example.com"
+
+    UpdateWykladowca:
+        type: object
+        properties:
+          imie:
+            type: string
+            example: "Jan"
+          nazwisko:
+            type: string
+            example: "Kowalski"
+          telefon:
+            type: string
+            example: "987654321"
+          email:
+            type: string
+            example: "jan.kowalski@example.com"         
+
+    CreateKierunek:
+      type: object
+      properties:
+        nazwa_kierunku:
+          type: string
+          example: "Informatyka"
+        poziom_studiow:
+          type: string
+          example: "Magisterskie"
+
+    Kierunek:
+      type: object
+      properties:
+        id_kierunek:
+          type: integer
+          example: 1
+        nazwa_kierunek:
+          type: string
+          example: "Informatyka"
+        poziom_studiow:
+          type: string
+          example: "Magisterskie"
+
+    CreatePlan:
+      type: object
+      properties:
+        semestr:
+          type: integer
+          example: 1
+        rok_akademicki:
+          type: string
+          example: "2023/2024"
+        id_kierunek:
+          type: integer
+          example: 1
+
+    Plan:
+      type: object
+      properties:
+        id_plany:
+          type: integer
+          example: 1
+        semestr:
+          type: integer
+          example: 1
+        rok_akademicki:
+          type: string
+          example: "2023/2024"
+        id_kierunek:
+          type: integer
+          example: 1
+
+    CreatePrzedmiot:
+      type: object
+      properties:
+        nazwa_przedmiotu:
+          type: string
+          example: "Matematyka"
+        liczba_ects:
+          type: integer
+          example: 6
+        id_plany_ksztalcenia:
+          type: integer
+          example: 1
+
+    Przedmiot:
+      type: object
+      properties:
+        id_przedmioty:
+          type: integer
+          example: 1
+        nazwa_przedmiotu:
+          type: string
+          example: "Matematyka"
+        liczba_ects:
+          type: integer
+          example: 6
+        id_plany_ksztalcenia:
+          type: integer
+          example: 1
+    
+    RemoveResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+    
+    NotFoundResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          example: Not found
+        code:
+          type: integer
+          example: 404
 
 info:
   title: API Title
   version: '1.0'
+
 servers:
   - url: http://localhost:3000
+
 paths:
   /studenci:
     get:
+      summary: Pobierz listę studentów
       responses:
         '200':
-          description: "List of students"
+          description: Lista studentów
           content:
-            'application/json':
+            application/json:
               schema: 
                 type: array
                 items:
                   $ref: '#/components/schemas/Student'
+    post:
+      summary: Stwórz nowego studenta
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateStudent'
+      responses:
+        '201':
+          description: Student został utworzony
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Student'
 
+  /studenci/{id}:
+    delete:
+      summary: Usuń studenta
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Student został usunięty
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RemoveResponse"
+        '404':
+          description: Student nie został znaleziony
+          content:
+            application/json:
+              schema:
+                 $ref: "#/components/schemas/NotFoundResponse"
+
+  /plany:
+    get:
+      summary: Pobierz listę planów kształcenia
+      responses:
+        '200':
+          description: Lista planów kształcenia
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Plan'
+    post:
+      summary: Stwórz nowy plan kształcenia
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreatePlan'
+      responses:
+        '201':
+          description: Plan został utworzony
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Plan'
+
+  /plany/{id}:
+      delete:
+        summary: Usuń plan
+        parameters:
+          - name: id
+            in: path
+            required: true
+            schema:
+              type: integer
+        responses:
+          '200':
+            description: Plan został usunięty
+            content:
+              application/json:
+                schema:
+                 $ref: "#/components/schemas/RemoveResponse"
+          '404':
+            description: Plan nie został odnaleziony
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/NotFoundResponse"
+
+  /przedmioty:
+    get:
+      summary: Pobierz listę przedmiotów
+      responses:
+        '200':
+          description: Lista przedmiotów
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Przedmiot'
+    post:
+      summary: Stwórz nowy przedmiot
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreatePrzedmiot'
+      responses:
+        '201':
+          description: Przedmiot został utworzony
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Przedmiot'
+
+  /przedmioty/{id}:
+        delete:
+          summary: Usuń przedmiot
+          parameters:
+            - name: id
+              in: path
+              required: true
+              schema:
+                type: integer
+          responses:
+            '200':
+              description: Przedmiot został usunięty
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/RemoveResponse'
+            '404':
+              description: Przedmiot nie zostały odnaleziony
+              content:
+                application/json:
+                  schema:
+                    $ref: "#/components/schemas/NotFoundResponse"
+
+  /kierunki:
+    get:
+      summary: Pobierz listę kierunków
+      responses:
+        '200':
+          description: Lista kierunków
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Kierunek'
+    post:
+      summary: Stwórz Kierunek
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateKierunek'
+      responses:
+        '201':
+          description: Stworzony kierunek
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Kierunek'
+  /kierunki/{id}:
+    delete:
+      summary: Usuń kierunek
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Przedmiot został usunięty
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RemoveResponse"
+        '404':
+          description: Przedmiot nie zostały odnaleziony
+          content:
+             application/json:
+              schema:
+                $ref: "#/components/schemas/NotFoundResponse"
+
+  /wykladowcy:
+    get:
+      summary: Pobierz listę wykladowców
+      responses:
+        '200':
+          description: Lista wykładowców
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Wykladowca'
+    post:
+      summary: Stwórz nowego wykladowce
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateWykladowca'
+      responses:
+        '201':
+          description: Wykladowca został utworzony
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Wykladowca'
+
+  /wykladowcy/{id}:
+    delete:
+      summary: Usuń wykładowce
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Wykładowca został usunięty
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RemoveResponse"
+        '404':
+          description: Wykładowca nie zostały odnaleziony
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/NotFoundResponse"
                 
+    put:
+      summary: Zaktualizuj dane wykładowcy
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            description: ID wykładowcy, którego dane mają zostać zaktualizowane
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateWykladowca'
+      responses:
+        '200':
+          description: Dane wykładowcy zostały zaktualizowane
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Wykladowca'
+        '400':
+          description: Błędne dane wejściowe
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Nieprawidłowe dane wejściowe"
+        '404':
+          description: Wykładowca nie został znaleziony
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundResponse'
+        '500':
+          description: Wewnętrzny błąd serwera
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Wystąpił błąd podczas aktualizacji wykładowcy"
 
+  /wykladowcy/{id}/dolacz-do-kierunku:
+    post:
+      summary: Dodaj wykładowcę do kierunku
+      operationId: addTeacherToCourse
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            description: ID wykładowcy
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id_kierunek:
+                  type: integer
+                  example: 6
+                  description: ID kierunku do którego wykładowca ma zostać dodany
+              required:
+                - id_kierunek
+      responses:
+        '200':
+          description: Wykładowca został pomyślnie dodany do kierunku
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RemoveResponse"
+        '400':
+          description: Błędne dane wejściowe lub brak parametrów
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Nieprawidłowe dane wejściowe"
+        '404':
+          description: Wykładowca lub kierunek nie został znaleziony
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/NotFoundResponse"
+        '500':
+          description: Wewnętrzny błąd serwera
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Wystąpił błąd podczas dodawania wykładowcy do kierunku"
